<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".Developer">

    <TextView
        android:id="@+id/titleaboutus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:fontFamily="sans-serif-smallcaps"
        android:text="Developer Info"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linkgithub"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="We're from Group of RCS2405A"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/linkgithub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleaboutus"
        android:layout_centerHorizontal="true"
        android:text="@string/hyperlink" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_below="@id/appdesc"
        android:layout_marginTop="30dip"
        app:srcCompat="@drawable/img_20220704_104807" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_below="@id/imageView2"
        android:layout_marginTop="50dip"
        app:srcCompat="@drawable/passport_nurezzatul_husna" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="110dp"
        android:layout_height="120dp"
        android:layout_below="@id/appdesc"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dip"
        android:layout_marginRight="10dip"
        app:srcCompat="@drawable/ijat" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_below="@id/appdesc"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dip"
        app:srcCompat="@drawable/hzq" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_below="@id/imageView4"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dip"
        android:layout_marginRight="14dp"
        app:srcCompat="@drawable/mas1_removebg_preview" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="140dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_marginLeft="10dip"
        android:text="@string/kimie"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="140dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView7"
        android:layout_marginLeft="10dip"
        android:text="@string/ezzatul"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="140dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView9"
        android:layout_marginLeft="10dip"
        android:text="@string/ezzatulid"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="140dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginLeft="10dip"
        android:text="@string/kimieid"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="140dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:text="@string/haziqid"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="140dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="false"
        android:layout_marginLeft="10dip"
        android:text="@string/izzatid"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="140dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView6"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="20dip"
        android:text="@string/masid"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="140dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView5"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dip"
        android:text="@string/izzat"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView4"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dip"
        android:text="@string/haziq"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="140dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView6"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="10dip"
        android:text="@string/mas"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"/>

</RelativeLayout>